--- a/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang_ho.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-04 00:27+0300\n"
-"PO-Revision-Date: 2013-05-30 22:24+0200\n"
+"PO-Revision-Date: 2013-06-04 11:20+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -6100,59 +6099,59 @@ msgid "Show properties"
 msgstr "施設を表示する"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:846
-#, fuzzy, php-format
+#, php-format
 msgid "Best price"
-msgstr "ゲストキッチン"
+msgstr "最安値"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:847
-#, fuzzy, php-format
+#, php-format
 msgid "Best location"
-msgstr "ロケーション"
+msgstr "最適のロケーション"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:848
-#, fuzzy, php-format
+#, php-format
 msgid "Safest"
-msgstr "セキュリティー"
+msgstr "最も安全"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:849
 #, php-format
 msgid "Best rating"
-msgstr ""
+msgstr "一番の評価"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:850
-#, fuzzy, php-format
+#, php-format
 msgid "Great location"
-msgstr "ロケーション"
+msgstr "素晴らしいロケーション"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:851
-#, fuzzy, php-format
+#, php-format
 msgid "Good location"
-msgstr "ロケーション"
+msgstr "良いロケーション"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:852
-#, fuzzy, php-format
+#, php-format
 msgid "Safe"
-msgstr "セキュリティー"
+msgstr "安全"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:853
 #, php-format
 msgid "Very safe"
-msgstr ""
+msgstr "とても安全"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:854
-#, fuzzy, php-format
+#, php-format
 msgid "Youth hostels only"
-msgstr "ユースホステル"
+msgstr "ユースホステルのみ"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:855
 #, php-format
 msgid "Check this box to see new search results as you move the map"
-msgstr ""
+msgstr "地図移動に伴う新しい検索結果はこのボックスをチェックすると見られます。"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:856
 #, php-format
 msgid "Redo search in map"
-msgstr ""
+msgstr "地図を再建策"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:857
 #, php-format
@@ -8403,7 +8402,7 @@ msgstr "パスワードの変更"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/restricted/user_favorite_properties.php:35
 msgid "No properties were saved."
-msgstr ""
+msgstr "保存された施設はありません。"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/restricted/user_favorite_properties.php:41
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/city_view.php:245
@@ -9750,7 +9749,7 @@ msgid "Invalid date"
 msgstr "無効の日付"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/controllers/cmain.php:2514
-#, fuzzy, php-format
+#, php-format
 msgid "Notes are exceeding maximum of %d characters"
 msgstr "メモは最大の%d文字を超えています。"
 
