--- a/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang_ho.po
@@ -8,10 +8,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-04 00:27+0300\n"
-"PO-Revision-Date: 2013-05-30 22:25+0200\n"
+"PO-Revision-Date: 2013-06-04 11:58+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -6251,39 +6250,41 @@ msgid "Best rating"
 msgstr "Miglior rating "
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:850
-#, fuzzy, php-format
+#, php-format
 msgid "Great location"
-msgstr "Ubicazione"
+msgstr "Splendida posizione"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:851
-#, fuzzy, php-format
+#, php-format
 msgid "Good location"
-msgstr "Ubicazione"
+msgstr "Bella posizione"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:852
-#, fuzzy, php-format
+#, php-format
 msgid "Safe"
-msgstr "Sicurezza"
+msgstr "Sicura"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:853
 #, php-format
 msgid "Very safe"
-msgstr ""
+msgstr "Molto sicura"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:854
-#, fuzzy, php-format
+#, php-format
 msgid "Youth hostels only"
-msgstr "Ostello"
+msgstr "Solo ostelli della gioventù"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:855
 #, php-format
 msgid "Check this box to see new search results as you move the map"
 msgstr ""
+"Controllate questa casella per vedere nuovi risultati di ricerca mentre "
+"muovete la mappa"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:856
 #, php-format
 msgid "Redo search in map"
-msgstr ""
+msgstr "Cerca nuovamente nella mappa"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:857
 #, php-format
@@ -8579,7 +8580,7 @@ msgstr "Cambia la Password"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/restricted/user_favorite_properties.php:35
 msgid "No properties were saved."
-msgstr ""
+msgstr "Nessuna proprietà è stata salvata."
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/restricted/user_favorite_properties.php:41
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/city_view.php:245
@@ -9978,7 +9979,7 @@ msgid "Invalid date"
 msgstr "Data invalida"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/controllers/cmain.php:2514
-#, fuzzy, php-format
+#, php-format
 msgid "Notes are exceeding maximum of %d characters"
 msgstr "Le note sono superiori al massimo di %d caratteri"
 
