--- a/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-04 00:27+0300\n"
-"PO-Revision-Date: 2013-05-30 22:22+0200\n"
+"PO-Revision-Date: 2013-06-04 11:16+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -6103,59 +6102,59 @@ msgid "Show properties"
 msgstr "호텔 표시"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:846
-#, fuzzy, php-format
+#, php-format
 msgid "Best price"
-msgstr "부엌"
+msgstr "최상의 가격"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:847
-#, fuzzy, php-format
+#, php-format
 msgid "Best location"
-msgstr "위치"
+msgstr "최고의 위치"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:848
-#, fuzzy, php-format
+#, php-format
 msgid "Safest"
-msgstr "보안"
+msgstr "가장 안전한"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:849
 #, php-format
 msgid "Best rating"
-msgstr ""
+msgstr "최고 등급"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:850
-#, fuzzy, php-format
+#, php-format
 msgid "Great location"
-msgstr "위치"
+msgstr "최적의 위치"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:851
-#, fuzzy, php-format
+#, php-format
 msgid "Good location"
-msgstr "위치"
+msgstr "좋은 위치"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:852
-#, fuzzy, php-format
+#, php-format
 msgid "Safe"
-msgstr "보안"
+msgstr "안전한"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:853
 #, php-format
 msgid "Very safe"
-msgstr ""
+msgstr "매우 안전"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:854
-#, fuzzy, php-format
+#, php-format
 msgid "Youth hostels only"
-msgstr "유스 호스텔"
+msgstr "유스 호스텔만"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:855
 #, php-format
 msgid "Check this box to see new search results as you move the map"
-msgstr ""
+msgstr "지도 이동에 따라 검색 결과를 확인하려면 이 박스에 체크하세요."
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:856
 #, php-format
 msgid "Redo search in map"
-msgstr ""
+msgstr "지도에서 검색을 다시 실행"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/helpfile/pofields.php:857
 #, php-format
@@ -8391,7 +8390,7 @@ msgstr "비밀 번호 변경"
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/restricted/user_favorite_properties.php:35
 msgid "No properties were saved."
-msgstr ""
+msgstr "어떠한 호텔도 저장되지 않았습니다."
 
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/restricted/user_favorite_properties.php:41
 #: /home/adrian/work/mcwebmanagement/source/code/application/views/city_view.php:245
