PO SPANISH JUNE 10

--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-30 17:44+0300\n"
-"PO-Revision-Date: 2013-06-04 10:49-0800\n"
+"PO-Revision-Date: 2013-06-10 09:15-0800\n"
 "Last-Translator: Mc web <info@mcwebmanagement.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -4982,7 +4982,7 @@ msgstr "Hola"
 #: ../code/application/views/helpfile/pofields.php:572
 #, php-format
 msgid "Good news!"
-msgstr "Mi nombre es Carmen y les agradezco su preferencia al elegirnos para hacerles una cotización para su grupo.<br><br><b>30,000 hostales en 4,000 ciudades</b><br><br>Tenemos más de 30,000 hostales en 4,000 ciudades a su disposición!<br>Esto les ofrece muchas posibilidades de elegir pero también a veces la elección puede parecer complicada.<br>No se preocupen, aquí estoy yo para ayudarlos.<br><br>"
+msgstr "Mi nombre es Adriana y les agradezco su preferencia al elegirnos para hacerles una cotización para su grupo.<br><br><b>30,000 hostales en 4,000 ciudades</b><br><br>Tenemos más de 30,000 hostales en 4,000 ciudades a su disposición!<br>Esto les ofrece muchas posibilidades de elegir pero también a veces la elección puede parecer complicada.<br>No se preocupen, aquí estoy yo para ayudarlos.<br><br>"
 
 #: ../code/application/views/email/admin/new_group_request.php:6
 #: ../code/application/views/helpfile/pofields.php~:573
@@ -5003,7 +5003,7 @@ msgstr "<b>Almuerzos y cenas</b><br><br>Almuerzos y cenas pueden organizarse des
 #: ../code/application/views/helpfile/pofields.php:576
 #, php-format
 msgid "Please do not hesitate to contact me if you have any questions."
-msgstr "<b>Fechas, presupuestos y viajeros confirmados</b><br>Cuando el número de personas y la fecha de viaje estén confirmados los invito a contactarme directamente.<br>De esa forma los ayudaré a finalizar su elección.<br>I nuevamente gracias por su confianza.<br><br>"
+msgstr "<b>Fechas, presupuestos y viajeros confirmados</b><br>Cuando el número de personas y la fecha de viaje estén confirmados los invito a contactarme directamente.<br>De esa forma los ayudaré a finalizar su elección.<br>Les agradecemos nuevamente la confianza depositada en nosotros.<br><br>"
 
 #: ../code/application/views/email/admin/new_group_request.php:12
 #: ../code/application/views/helpfile/pofields.php~:163
@@ -5019,7 +5019,7 @@ msgstr "Sinceramente"
 #: ../code/application/views/helpfile/pofields.php:582
 #, php-format
 msgid "Customer Service."
-msgstr "Carmen K<br>Servicio al Cliente<br>AlberguesJuveniles.es<br>AlberguesJuveniles.com"
+msgstr "Adriana U<br>Servicio al Cliente<br>+34-93-1768556<br>AlberguesJuveniles.es<br>AlberguesJuveniles.com"
 
 #: ../code/application/views/email/admin/new_group_request.php:43
 msgid "Addresse Email"
