po spanish june 11 V7

--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj_es.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj_es.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-12 01:26+0200\n"
-"PO-Revision-Date: 2013-06-11 18:54-0800\n"
+"PO-Revision-Date: 2013-06-11 20:18-0800\n"
 "Last-Translator: Mc web <info@mcwebmanagement.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -6660,7 +6660,7 @@ msgstr "Mejor evaluación"
 #: ../code/application/views/city_view.php:365
 #, php-format
 msgid "Youth hostels only"
-msgstr "Solamente hostales para jóvenes"
+msgstr "Sólo albergues"
 
 #: ../code/application/views/helpfile/pofields.php:855
 #, php-format
