--- a/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang.po
@@ -8,10 +8,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-13 16:57+0300\n"
-"PO-Revision-Date: 2013-06-04 11:58+0200\n"
+"PO-Revision-Date: 2013-06-15 21:06+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -3793,9 +3792,9 @@ msgstr "Caricamento in corso…"
 
 #: ../code/application/views/restricted/user_view.php:6
 #: ../code/application/views/helpfile/pofields.php:865
-#, fuzzy, php-format
+#, php-format
 msgid "Mon Compte - Réservation Auberges De Jeunesse"
-msgstr "Il tuo Profilo"
+msgstr "Il mio conto"
 
 #: ../code/application/views/restricted/user_view.php:8
 #: ../code/application/views/helpfile/pofields.php~:608
@@ -3906,9 +3905,9 @@ msgstr "Splendida posizione"
 #: ../code/application/views/helpfile/pofields.php~:860
 #: ../code/application/views/helpfile/pofields.php:860
 #: ../code/application/views/helpfile/pofields.php:888
-#, fuzzy, php-format
+#, php-format
 msgid "Overall evaluation"
-msgstr "Le mie recensioni"
+msgstr "Valutazione complessiva"
 
 #: ../code/application/views/mustache/property_list.php:223
 #: ../code/application/views/mustache/property_list.php:237
@@ -3949,16 +3948,16 @@ msgstr "Prezzo più basso per notte per persona in una camera privata"
 #: ../code/application/views/mustache/property_list.php:253
 #: ../code/application/views/helpfile/pofields.php~:858
 #: ../code/application/views/helpfile/pofields.php:858
-#, fuzzy, php-format
+#, php-format
 msgid "Show prices"
-msgstr "Mostra le proprietà"
+msgstr "Mostra i prezzi"
 
 #: ../code/application/views/mustache/property_list.php:258
 #: ../code/application/views/helpfile/pofields.php~:859
 #: ../code/application/views/helpfile/pofields.php:859
-#, fuzzy, php-format
+#, php-format
 msgid "Hide prices"
-msgstr "Miglior prezzo"
+msgstr "Nascondi i prezzi"
 
 #: ../code/application/views/mustache/saved_property_item.php:11
 msgid "Arrival:"
@@ -9554,9 +9553,9 @@ msgstr "Dormitorio famminile con %d letti e bagno in comune"
 
 #: ../code/application/views/helpfile/pofields.php~:861
 #: ../code/application/views/helpfile/pofields.php:861
-#, fuzzy, php-format
+#, php-format
 msgid "Hostels only"
-msgstr "Solo ostelli della gioventù"
+msgstr "Solo ostelli"
 
 #: ../code/application/views/helpfile/pofields.php:862
 #, php-format
@@ -9564,6 +9563,9 @@ msgid ""
 "Customers can easily cancel their reservation free of charge up to %d Days "
 "before arrival. Deposits paid are non refundable."
 msgstr ""
+"I clienti possono facilmente cancellare la loro prenotazione senza alcuna "
+"penale fino a %d giorni prima dell'arrivo. I depositi pagati non sono "
+"rimborsabili."
 
 #: ../code/application/views/helpfile/pofields.php:863
 #, php-format
@@ -9571,26 +9573,29 @@ msgid ""
 "Customers can easily cancel their reservation free of charge up to 1 Day "
 "before arrival. Deposits paid are non refundable."
 msgstr ""
+"I clienti possono facilmente cancellare la loro prenotazione senza alcuna "
+"penale fino a un giorno prima dell'arrivo. I depositi pagati non sono "
+"rimborsabili."
 
 #: ../code/application/views/helpfile/pofields.php:866
 #, php-format
 msgid "Please read carefully"
-msgstr ""
+msgstr "Per favore leggere attentamente"
 
 #: ../code/application/views/helpfile/pofields.php:867
 #, php-format
 msgid "I agree"
-msgstr ""
+msgstr "Accetto"
 
 #: ../code/application/views/helpfile/pofields.php:868
 #, php-format
 msgid "I do not agree and I will select another property"
-msgstr ""
+msgstr "Non accetto e selezionerò un'altra proprietà"
 
 #: ../code/application/views/helpfile/pofields.php:869
-#, fuzzy, php-format
+#, php-format
 msgid "Benefits of booking fee ?"
-msgstr "Nessun addebito per la prenotazione"
+msgstr "Benefici delle spese di prenotazione ?"
 
 #: ../code/application/views/helpfile/pofields.php:870
 #, php-format
@@ -9598,47 +9603,52 @@ msgid ""
 "Local customer service you can trust in your language available 24 hours a "
 "day"
 msgstr ""
+"Assistenza clienti locale e affidabile nella vostra lingua disponibile 24 "
+"ore al giorno"
 
 #: ../code/application/views/helpfile/pofields.php:871
 #, php-format
 msgid "Secured payment: your credit card is protected"
-msgstr ""
+msgstr "Pagamento sicuro: la vostra carta di credito è protetta"
 
 #: ../code/application/views/helpfile/pofields.php:872
 #, php-format
 msgid ""
 "No spam emails after you have booked and your information will stay private"
 msgstr ""
+"Nessuna email di spam in seguito alla vostra prenotazione e le vostre "
+"informazioni rimarrannno private"
 
 #: ../code/application/views/helpfile/pofields.php:873
 #, php-format
 msgid "You have access to millions of real reviews from travellers like you"
 msgstr ""
+"Avete accesso a milioni di vere recensioni da parte di viaggiatori come voi"
 
 #: ../code/application/views/helpfile/pofields.php:874
-#, fuzzy, php-format
+#, php-format
 msgid "And finally, you get the best price!"
-msgstr "Avete ottenuto il prezzo migliore"
+msgstr "E infine, ottenete il miglior prezzo!"
 
 #: ../code/application/views/helpfile/pofields.php:875
-#, fuzzy, php-format
+#, php-format
 msgid "Best price guarantee"
-msgstr "Il Prezzo Migliore - Garantito."
+msgstr "Miglior prezzo garantito"
 
 #: ../code/application/views/helpfile/pofields.php:876
-#, fuzzy, php-format
+#, php-format
 msgid "Free breakfast only"
-msgstr "Colazione Gratuita"
+msgstr "Solo colazione gratuita"
 
 #: ../code/application/views/helpfile/pofields.php:877
 #, php-format
 msgid "Click here to book"
-msgstr ""
+msgstr "Cliccate qui per prenotare"
 
 #: ../code/application/views/helpfile/pofields.php:878
 #, php-format
 msgid "1 million reviews"
-msgstr ""
+msgstr "1 milione di recensioni"
 
 #: ../code/application/views/helpfile/pofields.php:879
 #, php-format
@@ -9646,33 +9656,35 @@ msgid ""
 "You can compare pricing, services and location on the map for up to 5 "
 "properties"
 msgstr ""
+"Potete confrontare prezzi, servizi e posizione  sulla mappa fino a 5 "
+"proprietà"
 
 #: ../code/application/views/helpfile/pofields.php:880
-#, fuzzy, php-format
+#, php-format
 msgid "Please click here to compare"
-msgstr "Per favore cliccate qui per l'anteprima della mail di conferma"
+msgstr "Per favore cliccate qui per confrontare"
 
 #: ../code/application/views/helpfile/pofields.php:881
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to select this property"
-msgstr "Rimuovete questa struttura"
+msgstr "Cliccate qui per selezionare questa proprietà"
 
 #: ../code/application/views/helpfile/pofields.php:882
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "Lowest price for a bed in a dorm at this property for the selected dates"
 msgstr ""
-"Il prezzo più basso per persona per notte in un dormitorio in questa "
-"proprietà: %s"
+"Prezzo più basso per un letto in un dormitorio in questa proprietà per le "
+"date selezionate"
 
 #: ../code/application/views/helpfile/pofields.php:883
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "Lowest price per person in a private room at this property for the selected "
 "dates"
 msgstr ""
-"Il prezzo più basso per persona per notte in una stanza privata in questa "
-"proprietà: %s"
+"Prezzo più basso a persona in una stanza privata in questa proprietà per le "
+"date selezionate"
 
 #: ../code/application/views/helpfile/pofields.php:884
 #, php-format
@@ -9680,11 +9692,13 @@ msgid ""
 "Click here to see pricing for each type of room and the maximum number of "
 "available beds in each room"
 msgstr ""
+"Cliccate qui per vedere i prezzi per ogni tipo di stanza e il numero massimo "
+"di letti disponibili per stanza"
 
 #: ../code/application/views/helpfile/pofields.php:885
 #, php-format
 msgid "You can filter the results based on their specific districts"
-msgstr ""
+msgstr "Potete filtrare i risultati secondo il loro quartiere specifico"
 
 #: ../code/application/views/helpfile/pofields.php:886
 #, php-format
@@ -9692,11 +9706,13 @@ msgid ""
 "You can filter the results based how close there are to specific landmarks, "
 "train stations and airports"
 msgstr ""
+"Potete filtrare i risultati secondo la loro vicinanza a specifici luoghi "
+"storici, stazioni ferroviarie e aeroporti"
 
 #: ../code/application/views/helpfile/pofields.php:887
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to view pricing for this property"
-msgstr "Siamo spiacenti, non vi sono stanze disponibili in questa struttura"
+msgstr "Cliccate qui per vedere i prezzi per questa proprietà"
 
 #: ../code/application/views/property_rooms_avail.php:413
 #, php-format
